fixed github link

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     </body>
     <footer>
         <a href="https://uk.linkedin.com/in/ashley-wells-7956a8150" target="_blank"><li id="footermenu"><img src="static/images/linkedin.png" id="linkedin" ></li></a>
-        <a href="https://github.com/AJ-wells55/AJ-wells55" target="_blank"><li id="footermenu"><img src="static/images/GitHub-Mark-64px.png" id="github" ></li></a>
+        <a href="https://github.com/AJ-wells55" target="_blank"><li id="footermenu"><img src="static/images/GitHub-Mark-64px.png" id="github" ></li></a>
     </footer>
 </html>
 
